# jobtools

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: features.md
example/: main.py  queries.py  utils.py
example/app/: main.py
example/collect/: filters.py  main.py  priorities.py
example/debug/: main.py
jobtools/: .gitignore  __init__.py  app.py  html_builder.py  jobsdata.py  process.py  uni2ascii.py  utils.py
jobtools/app/: app.py  collect.py  collector.py  console.py  custom_widgets.py  filter.py  model.py  runner.py  settings.py  sort.py  utils.py
jobtools/app/models/: config_model.py  data_model.py  data_worker.py  sort_filter_model.py
jobtools/app/resources/: custom.qss  theme_dark.xml  theme_light.xml
jobtools/app/styles/: dark_theme.qss
jobtools/app/views/: collect.py  console.py  data.py  filter.py  runner.py  sort.py
jobtools/data/: dummy_jobs_data.csv
jobtools/models/: __init__.py  collection_worker.py  config.py  config_model.py  data_model.py  data_worker.py  jobsdata.py  sort_filter.py  sort_filter_model.py  workers.py
jobtools/resources/: .gitignore  custom.qss  generate.py  icons_dark.qrc  icons_light.qrc  resources.qrc
jobtools/utils/: __init__.py  degree_parser.py  description_cleaner.py  description_parser.py  html_builder.py  location_parser.py  logger.py  patterns.py  uni2ascii.py  utils.py
jobtools/views/: __init__.py  collect.py  console.py  data.py  details.py  filter.py  runner.py  settings.py  sort.py  widgets.py
